--- a/src/main/webapp/userTanimlama.xhtml
+++ b/src/main/webapp/userTanimlama.xhtml
@@ -3,38 +3,12 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui" xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core" xmlns:id="http://java.sun.com/jsf/composite"
+      xmlns:a4j="http://java.sun.com/jsf/html" xml:lang="en" lang="en">
 <h:head>Kullanıcı Tanım Ekranı</h:head>
 <h:body>
-    <h:outputStylesheet library="css" name="hbyscss.css"/>
-    <center>
-        <h:panelGrid columns="4" style="margin-top: 50px; background-color: white">
-           <p:row>
-            <h:outputText value="Kullanıcı Kodu:"/>
-            <h:outputText value="*"/>
-
-
-            <h:outputText value="Kullanıcı Adı:" title="user">Kullanıcı Adı:</h:outputText>
-            <h:outputText value="*"/>
-
-
-            <h:outputText> Kullanıcı Şifre: </h:outputText>
-            <h:outputText value="*"/>
-
-            <p:password id="pasword" value="#{userController.userImp.password}" required="true"/>
-
-            <p:inputText id="username" value="#{userController.userImp.username}" required="true"
-                         placeholder="Şifre Giriniz"/>
-            <p:message for="username"/>
-
-            <p:inputText id="name" value="#{userController.userImp.name}" required="true"/>
-            <p:message for="name"/>
-
-            <p:commandButton value="Kaydet"/>
-
-            <h:outputLabel> Aktif mi:</h:outputLabel>
-            <p:selectBooleanCheckbox value="#{userController.userImp.enabled}" required="true"/>
-        </h:panelGrid>
-    </center>
+        #{userController.deneme)
 </h:body>
 </html>
