--- a/src/main/webapp/userTanimlama.xhtml
+++ b/src/main/webapp/userTanimlama.xhtml
@@ -3,12 +3,11 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui" xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core" xmlns:id="http://java.sun.com/jsf/composite"
-      xmlns:a4j="http://java.sun.com/jsf/html" xml:lang="en" lang="en">
+      xml:lang="en" lang="en">
 <h:head>Kullanıcı Tanım Ekranı</h:head>
 <h:body>
-        #{userController.deneme)
+        <h:form id="frmCliente">
+                Kullanıcı Adı: <h:inputText value="#{userController.deneme}" />
+        </h:form>
 </h:body>
 </html>
