--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -3,7 +3,6 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <!--<h:form>-->
 <!--<p:menubar>-->
@@ -23,6 +22,8 @@
     <!--<p:menu model="#{menuBean.model}"/>-->
     <!--https://forum.primefaces.org/viewtopic.php?t=7502-->
     <title>PrimeFaces Hello World Example</title>
+
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css"/>
 </h:head>
 
 
@@ -62,53 +63,55 @@
 <!--<p:commandButton value="Save" update="panel" actionListener="#{userBean.save()}" icon="ui-icon-check"/>-->
 <!--</p:panel>-->
 <!--</h:form>-->
-<center>
-    <h:panelGrid columns="4" style="margin-top: 50px; background-color: white">
-        <h3>Yeni Üye Kaydı</h3>
-        <h:outputText/>
-        <h:outputText/>
-        <h:outputText/>
+<h:body>
+    <center>
+        <h:panelGrid columns="4" style="margin-top: 50px; ">
+            <h3>Yeni Üye Kaydı</h3>
+            <h:outputText/>
+            <h:outputText/>
+            <h:outputText/>
 
-        <h:outputText value="Adı"/>
-        <h:outputText value="*"/>
-        <p:inputText id="name" value="#{userBean.user.name}" required="true"/>
-        <p:message for="name"/>
+            <h:outputText value="Adı"/>
+            <h:outputText value="*"/>
+            <p:inputText id="name" value="#{userBean.user.name}" required="true"/>
+            <p:message for="name"/>
 
-        <h:outputText value="Soyadı"/>
-        <h:outputText value="*"/>
-        <p:inputText id="surname" value="#{userBean.user.surname}" required="true"/>
-        <p:message for="surname"/>
+            <h:outputText value="Soyadı"/>
+            <h:outputText value="*"/>
+            <p:inputText id="surname" value="#{userBean.user.surname}" required="true"/>
+            <p:message for="surname"/>
 
-        <h:outputText value="Kullanıcı Adı"/>
-        <h:outputText value="*"/>
-        <p:inputText id="username" value="#{userBean.user.username}" required="true"/>
-        <p:message for="username"/>
+            <h:outputText value="Kullanıcı Adı"/>
+            <h:outputText value="*"/>
+            <p:inputText id="username" value="#{userBean.user.username}" required="true"/>
+            <p:message for="username"/>
 
 
-        <h:outputText value="Parola"/>
-        <h:outputText value="*"/>
-        <p:password id="password" value="#{userBean.user.password}" required="true"
-                    match="passwordAgain"/>
-        <p:message for="password"/>
+            <h:outputText value="Parola"/>
+            <h:outputText value="*"/>
+            <p:password id="password" value="#{userBean.user.password}" required="true"
+                        match="passwordAgain"/>
+            <p:message for="password"/>
 
-        <h:outputText value="Parola Tekrar"/>
-        <h:outputText value="*"/>
-        <p:password id="passwordAgain" required="true"/>
-        <p:message for="passwordAgain"/>
+            <h:outputText value="Parola Tekrar"/>
+            <h:outputText value="*"/>
+            <p:password id="passwordAgain" required="true"/>
+            <p:message for="passwordAgain"/>
 
-        <!--<p:commandButton value="Kaydet" id="kaydet" update="save" actionListener="#{userBean.save}"-->
-                         <!--styleClass="ui-priority-primary"/>-->
-    </h:panelGrid>
-    <p:commandButton value="Kaydet" id="save" update="save" actionListener="#{userBean.save}"
-                     styleClass="ui-priority-primary"/>
+            <!--<p:commandButton value="Kaydet" id="kaydet" update="save" actionListener="#{userBean.save}"-->
+            <!--styleClass="ui-priority-primary"/>-->
+        </h:panelGrid>
+        <p:commandButton value="Kaydet" id="save" update="save" actionListener="#{userBean.save}"
+                         styleClass="ui-priority-primary"/>
 
-    <!--<p:-->
-    <!--<p:panelGrid columns="1">-->
-    <!--<p:commandButton value="Kaydet" style="float: right" update="display"-->
-                     <!--actionListener="#{userBean.save}"/>-->
-    <!--<p:commandButton></p:commandButton>-->
-    <!--<p style="float:left;width:206px;margin-left:20px;font-family:Arial;font-size:14px;color:red;font-weight:bold;"-->
-    <!--id="warning_text"></p>-->
-    <!--</p:panelGrid>-->
-</center>
+        <!--<p:-->
+        <!--<p:panelGrid columns="1">-->
+        <!--<p:commandButton value="Kaydet" style="float: right" update="display"-->
+        <!--actionListener="#{userBean.save}"/>-->
+        <!--<p:commandButton></p:commandButton>-->
+        <!--<p style="float:left;width:206px;margin-left:20px;font-family:Arial;font-size:14px;color:red;font-weight:bold;"-->
+        <!--id="warning_text"></p>-->
+        <!--</p:panelGrid>-->
+    </center>
+</h:body>
 </html>
