--- a/src/main/webapp/pages/BirimTanim.xhtml
+++ b/src/main/webapp/pages/BirimTanim.xhtml
@@ -3,11 +3,9 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xml:lang="en" lang="en">
-<h:head>Kullanıcı Tanım Ekranı</h:head>
-<h:body>
-        <h:form id="frmCliente">
-                Kullanıcı Adı: <h:inputText value="#{userController.deneme}" />
-        </h:form>
-</h:body>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+<f:view>
+    <h:outputLabel value="Hello, world"/>
+</f:view>
 </html>
