--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -3,9 +3,93 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+<h:head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
+</h:head>
+<h:head>
+    <title>Hastane Otomasyonu</title>
+    <f:metadata>
+
+    </f:metadata>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"></meta>
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css"/>
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>-->
+
+</h:head>
+
+<body onload="#{loginBean.checkSessionForUser()}">
+<p:growl autoUpdate="true"/>
+
+<h:form id="FRMLogin">
+    <p:focus context="FRMLogin" for="username"/>
+
+    <center>
+        <p:panelGrid id="panel" styleClass="grid">
+            <p:row>
+                <p:column>
+                    <span class="ui-icon ui-icon-person" style="display:inline-block;vertical-align: inherit;"/>
+                    <p:inputText placeholder="Kullanıcı Adı" id="username" value="#{loginBean.username}"
+                                 required="true" requiredMessage="Kullanıcı Adı"/>
+                </p:column>
+            </p:row>
+
+            <p:row>
+                <p:column>
+                    <span class="ui-icon ui-icon-locked" style="display:inline-block;vertical-align: inherit;"/>
+                    <p:password placeholder="Parola" id="password" value="#{loginBean.password}"/>
+                </p:column>
+            </p:row>
+
+            <p:row>
+                <p:column style="padding-left:25px">
+                    <p:commandButton style="width:100%" action="#{loginBean.login()}" update="panel" icon="ui-icon-key"
+                                     value="Giriş"/>
+                </p:column>
+            </p:row>
+
+        </p:panelGrid>
+    </center>
+</h:form>
+</body>
+<!--<h:body>-->
+<!--<center style="margin-top: 100px;">-->
+<!--<h:form id="form" prependId="false">-->
+
+<!--<center>HASTANE OTOMASYONU PROJESİ</center>-->
+<!--<center>-->
+<!--<h3>TETKIK KAYIT VE RANDEVU ALMA SİSTEMİ</h3>-->
+<!--</center>-->
+<!--<div id="divClass1">-->
+<!--<h:panelGrid columns="2" style="margin-top:60px;">-->
+
+<!--<center>-->
+<!--<h:outputText value="Kullanıcı Giriş Ekranı"/>-->
+<!--</center>-->
+<!--<h:outputText value=""/>-->
+
+<!--<h:outputText value="Kimlik Numaranız" style="margin-left: 15px;"/>-->
+<!--<p:inputText id="j_username" style="width: 130px;" required="true" maxlength="100" size="30"-->
+<!--value="#{userBean.username}"-->
+<!--requiredMessage="Kullanıcı adı alanı boş bırakılamaz..."/>-->
+
+
+<!--<h:outputText value="Parola" style="margin-left: 15px;"/>-->
+<!--<p:password id="j_password" required="true" style="width: 130px;"-->
+<!--maxlength="50" size="30"-->
+<!--value="#{userBean.password}"-->
+<!--requiredMessage="Parola alanı boş bırakılamaz..."/>-->
+
+<!--<p:commandButton value="Giriş"-->
+<!--action="#{loginController.login()}" style="margin-left: 265px;" ajax="false"/>-->
+
+<!--<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>-->
+<!--<h:outputText value=""/>-->
+<!--</h:panelGrid>-->
+<!--</div>-->
+<!--</h:form>-->
+<!--</center>-->
+<!--<br/>-->
+<!--</h:body>-->
 </html>
