--- a/src/main/webapp/pages/UserTanim.xhtml
+++ b/src/main/webapp/pages/UserTanim.xhtml
@@ -3,47 +3,73 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-<center>
-    <h:panelGrid columns="4" style="margin-top: 50px; background-color: white">
-        <h3>Yeni Üye Kaydı</h3>
-        <h:outputText/>
-        <h:outputText/>
-        <h:outputText/>
+<!--<h:form>-->
+<!--<p:menubar>-->
+<!--<p:submenu label="Mail">-->
+<!--<p:menuitem value="Gmail" url="http://www.google.com" />-->
+<!--<p:menuitem value="Hotmail" url="http://www.hotmail.com" />-->
+<!--<p:menuitem value="Yahoo Mail" url="http://mail.yahoo.com" />-->
+<!--</p:submenu>-->
+<!--<p:submenu label="Videos">-->
+<!--<p:menuitem value="Youtube" url="http://www.youtube.com" />-->
+<!--<p:menuitem value="Break" url="http://www.break.com" />-->
+<!--</p:submenu>-->
+<!--</p:menubar>-->
 
-        <h:outputText value="Adı"/>
-        <h:outputText value="*"/>
-        <p:inputText id="name" value="#{userBean.user.name}" required="true"/>
-        <p:message for="name"/>
+<!--</h:form>-->
+<h:head>
+    <!--<p:menu model="#{menuBean.model}"/>-->
+    <title>Hastane Otomasyon Projesi</title>
 
-        <h:outputText value="Soyadı"/>
-        <h:outputText value="*"/>
-        <p:inputText id="surname" value="#{userBean.user.surname}" required="true"/>
-        <p:message for="surname"/>
-
-        <h:outputText value="Kullanıcı Adı"/>
-        <h:outputText value="*"/>
-        <p:inputText id="username" value="#{userBean.user.username}" required="true"/>
-        <p:message for="username"/>
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css"/>
+</h:head>
 
 
-        <h:outputText value="Parola"/>
-        <h:outputText value="*"/>
-        <p:password id="password" value="#{userBean.user.password}" required="true"
-                    match="passwordAgain"/>
-        <p:message for="password"/>
 
-        <h:outputText value="Parola Tekrar"/>
-        <h:outputText value="*"/>
-        <p:password id="passwordAgain" required="true"/>
-        <p:message for="passwordAgain"/>
+<h:body>
+    <h:form>
+        <center>
+            <h:panelGrid columns="4" style="margin-top: 50px; ">
+                <h3>Yeni Üye Kaydı</h3>
+                <h:outputText/>
+                <h:outputText/>
+                <h:outputText/>
 
-        <!--<p:commandButton value="Kaydet" id="kaydet" update="save" actionListener="#{userBean.save}"-->
-        <!--styleClass="ui-priority-primary"/>-->
-    </h:panelGrid>
-    <p:commandButton value="Kaydet" id="save" update="save" actionListener="#{userBean.save}"
-                     styleClass="ui-priority-primary"/>
-</center>
+                <h:outputText value="Adı"/>
+                <h:outputText value="*"/>
+                <p:inputText id="name" value="#{userBean.user.name}" required="true"/>
+                <p:message for="name"/>
+
+                <h:outputText value="Soyadı"/>
+                <h:outputText value="*"/>
+                <p:inputText id="surname" value="#{userBean.user.surname}" required="true"/>
+                <p:message for="surname"/>
+
+                <h:outputText value="Kullanıcı Adı"/>
+                <h:outputText value="*"/>
+                <p:inputText id="username" value="#{userBean.user.username}" required="true"/>
+                <p:message for="username"/>
+
+
+                <h:outputText value="Parola"/>
+                <h:outputText value="*"/>
+                <p:password id="password" value="#{userBean.user.password}" required="true"
+                            match="passwordAgain"/>
+                <p:message for="password"/>
+
+                <h:outputText value="Parola Tekrar"/>
+                <h:outputText value="*"/>
+                <p:password id="passwordAgain" required="true"/>
+                <p:message for="passwordAgain"/>
+
+            </h:panelGrid>
+            <center>
+                <p:commandButton value="Kaydet" actionListener="#{userBean.save}" ajax="false"
+                                 icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
+            </center>
+
+        </center>
+    </h:form>
+</h:body>
 </html>
