--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -21,7 +21,10 @@
 
 <body onload="#{loginBean.checkSessionForUser()}">
 <p:growl autoUpdate="true"/>
-
+<center style="color: red">HASTANE OTOMASYONU PROJESİ</center>
+<center style="color: red">
+    <h3>TETKIK KAYIT VE RANDEVU ALMA SİSTEMİ</h3>
+</center>
 <h:form id="FRMLogin">
     <p:focus context="FRMLogin" for="username"/>
 
