--- a/src/main/resources/META-INF/resources/loginDemo.xhtml
+++ b/src/main/resources/META-INF/resources/loginDemo.xhtml
@@ -8,7 +8,7 @@
       xmlns:p="http://primefaces.org/ui" >
 <h:form>
     <h:outputLink value="javascript:void(0)" onclick="PF('dlg').show();" title="login">
-        <p:graphicImage name="/demo/images/login.png" />
+        <p:graphicImage name="./images/login.png" />
     </h:outputLink>
 
     <p:growl id="growl" sticky="true" showDetail="true" life="3000" />
@@ -16,13 +16,13 @@
     <p:dialog header="Login" widgetVar="dlg" resizable="false">
         <h:panelGrid columns="2" cellpadding="5">
             <h:outputLabel for="username" value="Username:" />
-            <p:inputText id="username" value="#{userLoginView.username}" required="true" label="username" />
+            <p:inputText id="username" value="#{loginBean.username}" required="true" label="username" />
 
             <h:outputLabel for="password" value="Password:" />
-            <p:password id="password" value="#{userLoginView.password}" required="true" label="password" />
+            <p:password id="password" value="#{loginBean.password}" required="true" label="password" />
 
             <f:facet name="footer">
-                <p:commandButton value="Login" update="growl" actionListener="#{userLoginView.login}"
+                <p:commandButton value="Login" update="growl" actionListener="#{loginBean.login}"
                                  oncomplete="handleLoginRequest(xhr, status, args)" />
             </f:facet>
         </h:panelGrid>
